[tool.poetry]
name = "zdppy_json"
version = "0.1.0"
description = ""
authors = ["zhangdapeng <pygosuperman@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
orjson = "^3.6.7"

[tool.poetry.dev-dependencies]
redis = "^4.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
